FIX (KIS-widget) Fix button alignment

--- a/src/patterns/kis-widget/_kis-widget.scss
+++ b/src/patterns/kis-widget/_kis-widget.scss
@@ -22,6 +22,7 @@
 .honours-degree-item {
     margin-right: 30px;
     padding-bottom: 4px;
+    clear: both;
 }
 
 .honours-degree-item button {
